# carve

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DEVELOPER_SETUP.md  README.md  conanfile.py
cmake/: CarveCompileOptions.cmake
scripts/: compile_shaders.sh  run-carve-release.sh
src/: main.cpp
src/common/: VariantUtils.h
src/render/: RenderBridge.cpp  RenderBridge.h  render_bridge.cpp  render_bridge.h
src/render/shaders/essl/: fs_ibl_mesh.bin.disasm  vs_ibl_mesh.bin.disasm  vs_selection_overlay.bin.disasm
src/render/shaders/glsl/: fs_ibl_mesh.bin.disasm  vs_ibl_mesh.bin.disasm
src/render/shaders_src/: fs_ibl_mesh.shader  fs_selection_overlay.shader  fs_selection_overlay_points.shader  varying.def.sc  vs_ibl_mesh.shader  vs_selection_overlay.shader
src/scene/: CommandOps.cpp  CommandOps.h  Commands.cpp  Commands.h  Core.cpp  Core.h  Document.cpp  Document.h  EditCommand.h  EditSession.cpp  EditSession.h  MeshBuilder.cpp  MeshBuilder.h  SceneCore.cpp  SceneCore.h  Selection.cpp  Selection.h  TopologyUtils.h  Types.h  UndoHistory.cpp  UndoHistory.h  scene_core.cpp  scene_core.h
src/ui/: BgfxViewWidget.cpp  BgfxViewWidget.h  MainWindow.cpp  MainWindow.h  bgfx_view_widget.cpp  bgfx_view_widget.h  main_window.cpp  main_window.h
